--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,17 @@
                 <version>2.2.2</version>
             </dependency>
             <dependency>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>3.0.20100224</version>
+                <scope>provided</scope>
+            </dependency>
+       <!--     <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <version>2.5</version>
                 <scope>provided</scope>
-            </dependency>
+            </dependency>-->
             <dependency>
                 <groupId>javax.servlet.jsp</groupId>
                 <artifactId>jsp-api</artifactId>
