--- a/web/pom.xml
+++ b/web/pom.xml
@@ -15,6 +15,11 @@
     <url>https://github.com/ranjan-rk/spring-social-flickr</url>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>batch-importer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
@@ -30,8 +35,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
+            <groupId>org.mortbay.jetty</groupId>
             <artifactId>servlet-api</artifactId>
+
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
