--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,8 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.batch</groupId>
-                <artifactId>spring-batch-integration</artifactId>
-                <version>1.2.0.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.batch</groupId>
                 <artifactId>spring-batch-core</artifactId>
-                <version>2.1.7.RELEASE</version>
+                <version>2.2.0.BUILD-SNAPSHOT</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.springframework</groupId>
