--- a/pom.xml
+++ b/pom.xml
@@ -24,25 +24,17 @@
     </developers>
     <repositories>
         <repository>
-            <id>org.springframework.maven.release</id>
-            <name>Spring Maven Release Repository</name>
-            <url>http://maven.springframework.org/release</url>
-            <releases>
+            <id>snapshots</id>
+            <url>http://maven.springframework.org/snapshot</url>
+            <snapshots>
                 <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
             </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>org.springframework.maven.milestone</id>
-            <name>Spring Maven Milestone Repository</name>
-            <url>http://maven.springframework.org/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
         </repository>
     </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -85,7 +77,7 @@
                 <version>3.0.20100224</version>
                 <scope>provided</scope>
             </dependency>
-       <!--     <dependency>
+            <!--     <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <version>2.5</version>
@@ -110,7 +102,7 @@
             <dependency>
                 <groupId>org.springframework.batch</groupId>
                 <artifactId>spring-batch-core</artifactId>
-                <version>2.1.7.RELEASE</version>
+                <version>2.2.0.BUILD-SNAPSHOT</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.springframework</groupId>
@@ -309,4 +301,5 @@
         <module>web</module>
         <module>batch-importer</module>
     </modules>
+
 </project>
