--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <properties>
         <spring.social.version>1.0.2.RELEASE</spring.social.version>
         <spring.framework.version>3.2.0.RELEASE</spring.framework.version>
+        <spring-batch-infrastructure.version>2.2.0.BUILD-SNAPSHOT</spring-batch-infrastructure.version>
     </properties>
     <description>Spring Social extension with connection support and an API binding for Flickr</description>
     <url>https://github.com/ranjan-rk/spring-social-flickr</url>
@@ -98,11 +99,30 @@
                 <groupId>org.springframework.batch</groupId>
                 <artifactId>spring-batch-integration</artifactId>
                 <version>1.2.0.RELEASE</version>
+                <exclusions>
+                    <exclusion> <groupId>org.springframework.batch</groupId><artifactId>spring-batch-infrastructure</artifactId> </exclusion>
+                    <exclusion> <groupId>org.springframework.batch</groupId><artifactId>spring-batch-core</artifactId> </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.springframework.batch</groupId>
                 <artifactId>spring-batch-core</artifactId>
-                <version>2.2.0.BUILD-SNAPSHOT</version>
+                <version>${spring-batch-infrastructure.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-tx</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-core</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.batch</groupId>
+                <artifactId>spring-batch-infrastructure</artifactId>
+                <version>${spring-batch-infrastructure.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.springframework</groupId>
@@ -150,21 +170,7 @@
                 <artifactId>postgresql</artifactId>
                 <version>8.4-702.jdbc4</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.batch</groupId>
-                <artifactId>spring-batch-core</artifactId>
-                <version>2.1.7.RELEASE</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.springframework</groupId>
-                        <artifactId>spring-tx</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.springframework</groupId>
-                        <artifactId>spring-core</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
+
             <dependency>
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
